# rpios-setup

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.makeralchemy-pi5.yml  config.sample.yml  example.dotbashrc
configs/profiles/: base.yml  dev.yml
rpios_setup/: cli.py  engine.py  facts.py  utils.py
rpios_setup/tasks/: apt_present.py  base.py  desktop_lxqt.py  file_present.py  piapps_present.py  raspi_config.py  systemd_manage.py  vscode_extensions.py  wallpaper_asset.py
templates/lxqt/: panel.conf.j2
